--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <html>
 
 <head>
-  <script src="lib.min.js"></script>
+  <link rel="stylesheet" href="assets/css/main.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
+  <script src="lib/lib.min.js"></script>
 </head>
 
 <body>
-  <h1>io Game</h1>
+
 </body>
 
 </html>
