--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,17 @@
 
 <head>
   <link rel="stylesheet" href="assets/css/main.css">
+
+
+  <!-- Socket.io server script -->
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+  </script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.min.js"></script>
-  <script src="lib/lib.min.js"></script>
+  <script src="lib/lib.js"></script>
+
 </head>
 
 <body>
